--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -56,7 +56,19 @@ dags:
         script_name: "post_launch_trailer_metrics"
         param_file_name: "post_launch_trailer_metrics"
         upstream_task_name: "python_script_post_launch_metrics"
-
+      
+      # prelaunch features
+      - name: "prelaunch_trailer_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
+        sql_file_names:
+          - "feature_extraction_pre_launch_trailer.sql"
+        upstream_task_name: "python_script_post_launch_trailer_metrics"
+        downstream_task_name: ecr_container_creation
+      
+      # postlaunch features (some used in prelaunch)
       - name: "trailer_feature_to_staging"
         templates_dict:
           stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
