Dev prod cost (#387)
* product_budget_test

* production budget sql hotfix

* metrics

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -139,15 +139,15 @@ dags:
         upstream_task_name: "python_script_post_launch_trailer_metrics"
         downstream_task_name: ecr_container_creation
 
-      - name: "production_budget_imdb_to_staging"
-        templates_dict:
-          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
-          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
-          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
-        sql_file_names:
-          - "feature_extraction_production_budget_imdb.sql"
-        upstream_task_name: "python_script_post_launch_trailer_metrics"
-        downstream_task_name: ecr_container_creation
+      # - name: "production_budget_imdb_to_staging"
+      #   templates_dict:
+      #     stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+      #     database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+      #     schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
+      #   sql_file_names:
+      #     - "feature_extraction_production_budget_imdb.sql"
+      #   upstream_task_name: "python_script_post_launch_trailer_metrics"
+      #   downstream_task_name: ecr_container_creation
 
       - name: "vtp_feature_to_staging"
         templates_dict:
