--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -86,7 +86,7 @@ dags:
         upstream_task_name: "python_script_wikipedia_page_view"
         downstream_task_name: ecr_container_creation
 
-      # prelaunch wikipedia page view, before d28
+      # prelaunch wikipedia page view -27 to 0
         - name: "wikipedia_page_view_pre_launch_feature_to_staging"
         templates_dict:
           stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
