Dev wiki view pipeline (#505)
* hotfix

* wikipedia page view pipeline

* hotfix

* yml file update

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix to befored28 query

* hotfix

* post launch wiki view feature

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -97,8 +97,19 @@ dags:
           - "feature_extraction_wikipedia_page_view_pre_launch.sql"
         upstream_task_name: "python_script_wikipedia_page_view"
         downstream_task_name: ecr_container_creation
+
+      # prelaunch wikipedia page view 1 to 27
+      - name: "postlaunch_wikipedia_page_view_feature_to_staging"
+        templates_dict:
+          stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
+          database: "{{ var.value.DS_SF_MAX_DATABASE }}"
+          schema: "{{ var.value.DS_SF_MAX_SCHEMA }}"
+        sql_file_names:
+          - "feature_extraction_wikipedia_page_view_post_launch.sql"
+        upstream_task_name: "python_script_wikipedia_page_view"
+        downstream_task_name: ecr_container_creation
       
-      # postlaunch features (some used in prelaunch)
+      # postlaunch features
       - name: "trailer_feature_to_staging"
         templates_dict:
           stage: "{{ var.value.DS_CONTENT_HBO_INGEST_DATASCIENCE_CONTENT }}"
