Dev wiki view pipeline (#532)
* hotfix

* wikipedia page view pipeline

* hotfix

* yml file update

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix to befored28 query

* hotfix

* post launch wiki view feature

* hotfix

* log group features

* change of flow

* update the flow

* hotfix to total prelaunch wiki page view feature

* hotfix

* hotfix

* hotfix to the dashboard table query

* hotfix

* write to social signal input bucket

* separate the social signal title list process from the funnel metric process

--- a/dags/resources/config/content_process_PostLaunchMetrics.yml
+++ b/dags/resources/config/content_process_PostLaunchMetrics.yml
@@ -64,6 +64,14 @@ dags:
         script_name: "post_launch_trailer_metrics"
         param_file_name: "post_launch_trailer_metrics"
         upstream_task_name: "python_script_post_launch_metrics"
+
+      # update the matrics second
+      - name: "python_script_social_signal_title_list"
+        type: "BashOperator"
+        script_loc: "common"
+        script_name: "social_signal_title_list"
+        param_file_name: "social_signal_title_list"
+        upstream_task_name: "python_script_post_launch_metrics"
       
       # prelaunch trailer features
       - name: "prelaunch_trailer_feature_to_staging"
